# igni

./: .gitignore  CLAUDE_CODE_PARITY.md  CODE_AUDIT.md  CODE_STANDARDS.md  NOTICE  QA_CHECKLIST.md  QUICKSTART.md  README.md  REFACTOR_PROGRESS.md  TESTING_PLAN.md  alembic.ini  pyproject.toml
.github/: setup-repo-rules.sh
.github/workflows/: ci.yml  release-readiness.yml  release.yml  test-updater-sig.yml
agents/: architect.codeindex.md  architect.md  debugger.codeindex.md  debugger.md  docs.md  editor.md  explorer.md  planner.md  qa.md  reviewer.codeindex.md  reviewer.md  security.codeindex.md  security.md  simplifier.md
clients/: README.md
clients/jetbrains/: README.md  build.gradle.kts
clients/tauri/: README.md
clients/tauri/scripts/: strip-dmg-volume-icon.sh
clients/tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
clients/tauri/src-tauri/capabilities/: default.json
clients/tauri/src-tauri/icons/: icon.icns
clients/tauri/src-tauri/src/: lib.rs  runtime.rs
clients/tauri/src-tauri/tests/: spawn_smoke.rs
clients/vscode/: README.md  package-lock.json  package.json
clients/vscode/images/: .gitkeep
clients/vscode/src/: extension.ts  runtime.ts  version.generated.ts
clients/vscode/test/: fake-backend.js
clients/web/: ember.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
clients/web/e2e/: app.spec.ts  chat-scroll.spec.ts  demo.spec.ts  live-be-plan-decision.spec.ts  plan-card.spec.ts  real-be-thinking.mjs  real-be.spec.ts  svgbob-removed-demo.spec.ts  visualizer-stream.spec.ts  watcher-demo.spec.ts  watcher-footer-pill.spec.ts  watcher-orphan-live.spec.ts  watcher-orphan-with-logs.spec.ts  watcher-populated.spec.ts
clients/web/public/: loading.html
clients/web/scripts/: gen-visualizer-prompt.ts
clients/web/src/: App.tsx  clientState.test.ts  main.tsx  theme.css
docs/: AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CODEINDEX.md  CODEINDEX_EVAL_REPORT__v13_n5.md  CODEINDEX_EVAL_REPORT__v15_n5.md  CODEINDEX_FOLDER_CONTEXT_PROPOSAL.md  CODEINDEX_STORAGE.md  COMPARISON.md  CONFIGURATION.md  DEVELOPMENT.md  EVALS.md  HOOKS.md  MCP.md  MIGRATION.md  ONBOARDING.md  PLUGINS.md  SECURITY.md  SKILLS.md  TESTING.md  TOKEN.md  TOOLS.md
evals/: _mcp_stubs.py  architect.yaml  background_notifications.yaml  bulk_edits.yaml  codeindex.yaml  conversational.yaml  debugger.yaml  diagnostician.yaml  docs.yaml  editor.yaml  ember_server_codeindex.yaml  ember_server_codewrite.yaml  ember_server_db_codewrite.yaml  ember_server_retrieval.yaml  ember_server_v6.yaml  error_recovery.yaml  explorer.yaml  file_safety.yaml  git.yaml  knowledge_corner.yaml  knowledge_proactive.yaml  long_running.yaml  main_agent.yaml  mcp.yaml  memory_knowledge.yaml  multiturn.yaml  planner.yaml  qa.yaml  reviewer.yaml  schedule.yaml  security.yaml  simplifier.yaml  team_modes.yaml  team_tasks.yaml  web_discipline.yaml
evals/codeindex/: README.md  build_jsonl.py  setup.py  spec.py
evals/ember_server_codeindex/: setup.py
evals/fixtures/: codeindex_repo.snapshot.jsonl
evals/fixtures/bulk_edits/: README.md
evals/fixtures/codeindex_repo/: README.md
evals/fixtures/sample_project/: README.md  ember.md  pyproject.toml
migrations/: env.py
migrations/versions/: 4f7a1c2e9b3d_add_loop_tables.py  8c2e7b1a4f9d_loop_cap_explicit.py  9318ebdb0db5_initial_sqlite_schema.py
scripts/: _generate_specialist_evals.py  _repro_explorer_no_tool_calls.py  codewrite_judge.py  onboarding-smoke.ps1  onboarding-smoke.sh  probe_rate_limits.py  profile_fd_count.py  profile_memory_over_time.py  profile_multi_session.py  profile_release_phases.py  profile_run.py  reindex_hnsw.py  run_claude_code_eval.py  run_codeindex_eval.py  run_evals_smoke.py  seed_watcher_e2e_orphan.py  test-proxy-integration.sh  test-proxy.mjs
skills/resolve-issues/: SKILL.md
src/ember_code/: __init__.py  _torchvision_shim.py  cli.py  prefetch_models.py
src/ember_code/backend/: __main__.py  agno_history_plan_scanner.py  app.py  backend_bootstrap.py  browser_opener.py  builtin_command_registry.py  captured_shell_runner.py  chat_history_searcher.py  cmd_agents.py  cmd_auth.py  cmd_codeindex.py  cmd_config.py  cmd_context.py  cmd_evals.py  cmd_help.py  cmd_hooks.py  cmd_knowledge.py  cmd_loop.py  cmd_memory.py  cmd_misc.py  cmd_model.py  cmd_modes.py  cmd_plugin.py  cmd_schedule.py  cmd_session.py  command_handler.py  command_result.py  controller_registry.py  dir_scanner.py  file_completion_service.py  folder_picker.py  head_breakdown_builder.py  hitl_controller.py  hitl_stream_mux.py  hitl_tracer.py  keyboard_shortcuts_help.py  lockfile.py  login_coordinator.py  markdown_command_dispatcher.py  marketplace_controller.py  (+81 more)
src/ember_code/bundled_agents/: diagnostician.md  docs.md  editor.md  explorer.codeindex.md  git.md  plan_researcher.codeindex.md  plan_researcher.md  qa.md  reviewer.codeindex.md  security.codeindex.md  security.md  simplifier.codeindex.md  simplifier.md  visualizer.md
src/ember_code/cli/: __init__.py  context.py  invocation.py  logging.py  options.py  resume.py
src/ember_code/core/: embeddings.py  init.py  (+9 more)
tests/: conftest.py  test_agent_factory.py  test_agents_panel.py  test_agno_events.py  test_api_keys.py  test_audit.py  test_audit_logger.py  test_auth.py  test_auth_client.py  test_backend_lockfile.py  test_backend_serialize.py  test_backend_server.py  test_bypass_resistant_e2e.py  test_changeset_fetcher.py  test_cli.py  test_cli_flags.py  test_cli_permission_wiring.py  test_cloud_models.py  test_code_index.py  test_code_index_db.py  test_code_index_delta.py  test_code_index_pg.py  test_codeindex_auto_clean.py  test_codeindex_availability_refresh.py  test_codeindex_build_tree.py  test_codeindex_disambiguation.py  test_codeindex_eval_fixture.py  test_codeindex_filters.py  test_codeindex_panel.py  test_codeindex_refs_for.py  test_codeindex_status.py  test_codeindex_sync_manager.py  test_codeindex_tools.py  test_codeindex_tree_attach.py  test_commands.py  test_context.py  test_context_frontmatter.py  test_context_helpers.py  test_crash_survival.py  test_custom_tools.py  (+153 more)
(+672 files in other folders)
