[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ignite-ember"
version = "0.5.0"
description = "Terminal-based AI coding assistant built on Agno"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "agno[openai,ddg,sqlite,sql,mcp]~=2.5",
    "aiosqlite~=0.22",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "greenlet~=3.3",
    "rich~=14.3",
    "textual~=8.1",
    "pyyaml~=6.0",
    "click~=8.3",
    "pydantic~=2.12",
    "httpx~=0.28",
    "google-genai~=1.67",
    "tokenizers>=0.22.2",
    "tiktoken>=0.12.0",
    "ripgrep>=15.0.0",
    "beautifulsoup4>=4.12",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "aiofiles>=24.1",
    "youtube_transcript_api>=1.0",
    "arxiv>=2.1",
    "wikipedia>=1.4",
    "dateparser>=1.4.0",
    "chromadb>=1.5.5",
    "sentence-transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "ruff~=0.15",
    "mypy~=1.19",
    "python-dotenv~=1.2",
]
mcp = [
    "mcp~=1.26",
]
gemini = [
    "google-genai~=1.67",
]
web = [
    "duckduckgo-search~=8.1",
]

[project.scripts]
ignite-ember = "ember_code.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ember_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
# Matches ``requires-python = ">=3.11"`` above. ``StrEnum`` is 3.11+;
# leaving mypy at 3.10 narrows ``StrEnum`` members to ``str`` and
# trips dict-key / tuple-element / index checks across the codebase.
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["union-attr", "annotation-unchecked", "arg-type", "return-value", "attr-defined", "import-untyped", "call-arg", "override"]
