[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ignite-ember"
version = "0.6.4"
description = "AI coding assistant with multi-agent orchestration — TUI, web, JetBrains, VSCode, and Tauri clients"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Ignite Ember" }]
keywords = ["ai", "coding-assistant", "agent", "agno", "claude", "openai", "tui", "jetbrains"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Terminals",
]

# Tight ``~=X.Y.Z`` pins (PEP 440 "compatible release", which expands
# to ``>= X.Y.Z, < X.(Y+1).0``). Any minor-version bump from an
# upstream package goes through an explicit ember-code release, not
# through pip's resolver. Stops repeats of the v0.5.2 incident where
# ``textual~=8.1`` quietly let 8.2.7 install and the renamed theme
# ``textual-ansi`` → ``ansi-dark`` silently bricked the TUI.
dependencies = [
    "agno[openai,ddg,sqlite,sql,mcp]~=2.6.12",
    "aiosqlite~=0.22.1",
    "sqlalchemy[asyncio]~=2.0.50",
    "alembic~=1.18.4",
    "greenlet~=3.5.1",
    "rich~=15.0.0",
    "textual~=8.2.7",
    "pyyaml~=6.0.3",
    "click~=8.4.1",
    "pydantic~=2.13.4",
    "httpx~=0.28.1",
    "google-genai~=2.8.0",
    "tokenizers~=0.22.2",
    "tiktoken~=0.13.0",
    "ripgrep~=15.1.0",
    "beautifulsoup4~=4.15.0",
    "pypdf~=6.13.0",
    "python-docx~=1.2.0",
    "python-pptx~=1.0.2",
    "openpyxl~=3.1.5",
    "aiofiles~=25.1.0",
    "youtube_transcript_api~=1.2.4",
    "arxiv~=4.0.0",
    "wikipedia~=1.4.0",
    "dateparser~=1.4.0",
    "chromadb~=1.5.9",
    "sentence-transformers~=5.5.1",
    "websockets~=16.0",
]

[project.urls]
Homepage = "https://ignite-ember.sh"
Repository = "https://github.com/ignite-ember/ember__code"
Issues = "https://github.com/ignite-ember/ember__code/issues"
Changelog = "https://github.com/ignite-ember/ember__code/releases"

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "ruff~=0.15.6",
    "mypy~=1.19.1",
    "python-dotenv~=1.2.2",
]
mcp = [
    "mcp~=1.26.0",
]
gemini = [
    "google-genai~=2.8.0",
]
web = [
    "duckduckgo-search~=8.1",
]

[project.scripts]
ignite-ember = "ember_code.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ember_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
# Matches ``requires-python = ">=3.11"`` above. ``StrEnum`` is 3.11+;
# leaving mypy at 3.10 narrows ``StrEnum`` members to ``str`` and
# trips dict-key / tuple-element / index checks across the codebase.
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["union-attr", "annotation-unchecked", "arg-type", "return-value", "attr-defined", "import-untyped", "call-arg", "override"]
